--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -1,9 +1,10 @@
 name: goreleaser
 
 on:
-  push:
-    tags:
-      - '*'
+#  push:
+#    tags:
+#      - '*'
+  workflow_dispatch: {}
 
 jobs:
   goreleaser:
